add codec generator